app/deployment/k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realfake-prometheus
  namespace: realfake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realfake-prometheus
  template:
    metadata:
      labels:
        app: realfake-prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.54.1
          args:
            - --config.file=/etc/prometheus/prometheus.yml
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus
      volumes:
        - name: config
          configMap:
            name: realfake-prometheus-config
