app/deployment/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realfake-backend
  namespace: realfake
spec:
  selector:
    app: realfake-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
