app/deployment/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realfake-frontend
  namespace: realfake
spec:
  selector:
    app: realfake-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
