app/deployment/k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realfake-prometheus
  namespace: realfake
spec:
  selector:
    app: realfake-prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
