app/deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realfake-ingress
  namespace: realfake
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: realfake.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: realfake-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realfake-frontend
                port:
                  number: 3000
